# Neural-Networks

./: .gitignore  Makefile  README.md  README_AI.md  armstrong_numbers.java  clean-test.md  docker-compose.yml  dvc.yaml  hangman_game.py  neural_network_demo.py  neural_network_hangman.py  prime_numbers.py  pyproject.toml  requirements.txt  train_cnn.py  train_cnn_model.py  train_letter_model.py  writer.py
.github/workflows/: ci.yml  model-validation.yml
configs/: default.yaml
docker/: Dockerfile.serve  Dockerfile.train
docs/superpowers/plans/: 2026-03-24-food-vision-implementation.md
docs/superpowers/specs/: 2026-03-24-food-vision-design.md
models/: letter_predictor.pt
src/data/: dataset.py  download.py  transforms.py
src/evaluation/: error_analysis.py  gradcam.py  metrics.py
src/models/: efficientnet.py  factory.py
src/serving/: app.py  export_onnx.py  predict.py
src/training/: callbacks.py  optimizer.py  trainer.py
src/utils/: config.py  logging.py  reproducibility.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_metrics.py  test_model.py
